datafusion/property-tests/tests/physical_plan/builtin_plans/snapshots/physical_plan__builtin_plans__builtin_join_findings_extended.snap
---
source: datafusion/property-tests/tests/physical_plan/builtin_plans/mod.rs
expression: output
---
## HashJoinExec CollectLeft Inner
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft Left
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft Right
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft Full
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft LeftSemi
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft RightSemi
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft LeftAnti
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft RightAnti
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft LeftMark
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft RightMark
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft Inner with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft Full with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft RightSemi with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft LeftAnti with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft Inner with nulls equal
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec CollectLeft Inner with fetch
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec Partitioned Inner
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec Partitioned Left
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec Partitioned Full
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec Partitioned RightAnti
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec Partitioned LeftMark
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## HashJoinExec Partitioned Full with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec Inner
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec Left
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec Full
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec LeftSemi
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec RightAnti
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec LeftMark
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec Inner with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec Full with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SortMergeJoinExec LeftAnti with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## NestedLoopJoinExec Inner
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## NestedLoopJoinExec Left
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## NestedLoopJoinExec Full
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## NestedLoopJoinExec RightSemi
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## NestedLoopJoinExec LeftAnti
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## NestedLoopJoinExec RightMark
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## CrossJoinExec
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SymmetricHashJoinExec SinglePartition Inner
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## SymmetricHashJoinExec Partitioned Full with filter
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## PiecewiseMergeJoinExec Inner
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations

## PiecewiseMergeJoinExec Full
  case seed 1: no violations
  case seed 2: no violations
  case 2 partitions: no violations
  case 5 partitions: no violations
  case large input: no violations
